added kafka producer and stored data as iceberg table using spark